--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:icon="@mipmap/undivided_logo_notext"
         android:label="@string/app_name"
         android:launchMode="singleTask"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/undivided_logo_notext"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service android:name=".BackgroundService.BackgroundIntentService" />
@@ -159,7 +159,8 @@
         <activity android:name=".Functions" />
         <activity android:name=".DisableAppSwitch" />
         <activity android:name=".Profile" />
-        <activity android:name=".SafeMode" />
+        <activity android:name=".SafeMode"
+            android:theme="@style/AppTheme.NoActionBarRed"/>
 
         <!--Call Log Package-->
         <activity android:name=".CallLog.CallLogActivity" />
