--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".GroupSender.App"
         android:allowBackup="true"
         android:icon="@mipmap/undivided_logo_notext"
         android:label="@string/app_name"
@@ -49,6 +48,14 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <!-- Navigation Package -->
+        <activity
+            android:name=".NavigationMode.Navigation"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".NavigationMode.SearchDestination"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -65,28 +72,12 @@
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <!-- Navigation Package -->
-        <activity
-            android:name=".NavigationMode.Navigation"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".NavigationMode.SearchDestination"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <!-- Group Package -->
+        <!-- GroupsPackage -->
         <activity
             android:name=".Group.GroupContactPicker"
             android:label="@string/contactpicker_title"
             android:parentActivityName=".AutoReply.CustomizeMessage"
-
-            android:theme="@style/AppTheme">
-
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.training.android.undivided.AutoReply.CustomizeMessage" />
-        </activity>
+            android:theme="@style/AppTheme"/>
         <activity android:name=".Group.ViewGroup" />
         <activity android:name=".Group.AddGroup" />
         <activity android:name=".Group.ViewCard"/>
@@ -121,7 +112,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".AutoReply.AutoReplyActivity" />
-
         <receiver android:name=".AutoReply.BroadcastReceivers.SMSReceiver">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
@@ -150,11 +140,28 @@
         <activity android:name=".GroupSender.Activity.MainActivity" />
         <activity android:name=".GroupSender.GroupSenderActivity" />
         <activity android:name=".GroupSender.SimpleDividerItemDecoration" />
+        <activity
+            android:name=".GroupSender.Module.Edit_Message.EditMessageActivity"
+            android:label="@string/edit_message"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".GroupSender.Module.Message_Detail.MessageDetailActivity"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".GroupSender.Module.Search_Message.SearchMessageActivity"
+            android:parentActivityName=".GroupSender.Module.GroupSenderActivity">
+        </activity>
+        <activity android:name=".GroupSender.Module.GroupSenderActivity"/>
+        <activity android:name=".GroupSender.Module.Send_Message.SendMessageActivity"
+            android:label="@string/send_message"
+            android:theme="@style/AppTheme"
+            >
+
+        </activity>
 
         <!-- Intro Package -->
         <activity
             android:name=".Intro.WelcomeActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity android:name=".Settings" />
         <activity android:name=".SpeechToText" />
         <activity android:name=".TextToSpeech" />
@@ -166,32 +173,8 @@
         <activity android:name=".SafeMode"
             android:theme="@style/AppTheme.NoActionBarRed"/>
 
-        <activity android:name=".GroupSender.Module.GroupSenderActivity"/>
-
-
         <!-- Call Log Package -->
         <activity android:name=".CallLog.CallLogActivity" />
-
-        <!--Group Sender Package-->
-        <activity
-            android:name=".GroupSender.Module.Edit_Message.EditMessageActivity"
-            android:label="@string/edit_message"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".GroupSender.Module.Message_Detail.MessageDetailActivity"
-            android:theme="@style/AppTheme"/>
-
-        <activity android:name=".GroupSender.Module.Search_Message.SearchMessageActivity"
-            android:parentActivityName=".GroupSender.Module.GroupSenderActivity"
-            >
-        </activity>
-        <activity android:name=".GroupSender.Module.Send_Message.SendMessageActivity"
-
-            android:label="@string/send_message"
-            android:theme="@style/AppTheme"
-            >
-
-        </activity>
 
     </application>
 
