--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.BIND_VOICE_INTERACTION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -161,7 +162,7 @@
         <activity
             android:name=".GroupSender.Module.Send_Message.SendMessageActivity"
             android:label="@string/send_message"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
 
         <!-- Intro Package -->
         <activity
@@ -178,9 +179,6 @@
         <activity
             android:name=".SafeMode"
             android:theme="@style/AppTheme.NoActionBarRed" />
-
-        <!-- Call Log Package -->
-        <activity android:name=".CallLog.CallLogActivity" />
 
         <!-- Call Log Package -->
         <activity android:name=".CallLog.CallLogActivity" />
