--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -159,7 +159,8 @@
         <activity android:name=".SpeechToText" />
         <activity android:name=".TextToSpeech" />
         <activity android:name=".History" />
-        <activity android:name=".Emergency" />
+        <activity android:name=".Emergency"
+            android:theme="@style/AppTheme.NoActionBarRed"/>
         <activity android:name=".Functions" />
         <activity android:name=".DisableAppSwitch" />
         <activity android:name=".Profile" />
@@ -171,7 +172,8 @@
 
 
         <!-- Call Log Package -->
-        <activity android:name=".CallLog.CallLogActivity" />
+        <activity android:name=".CallLog.CallLogActivity"
+            android:theme="@style/AppTheme"/>
 
         <!--Group Sender Package-->
         <activity
@@ -193,7 +195,6 @@
             >
 
         </activity>
-
     </application>
 
 </manifest>
