--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:27.0.0'
     compile 'com.google.maps.android:android-maps-utils:0.5+'
     compile 'com.txusballesteros:bubbles:1.2.1'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.1'
+    compile 'com.github.ppamorim:dragger:1.2'
 
     //bottom bar lib
     compile 'com.roughike:bottom-bar:2.0.2'
