--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.training.android.undivided"
-    android:name=".MyApp">
+    android:name=".MyApp"
+    package="com.training.android.undivided">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.BIND_VOICE_INTERACTION" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -28,7 +28,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application
@@ -177,8 +177,9 @@
         <activity android:name=".SpeechToText" />
         <activity android:name=".TextToSpeech" />
         <activity android:name=".History" />
-        <activity android:name=".Emergency"
-            android:theme="@style/AppTheme.NoActionBarRed"/>
+        <activity
+            android:name=".Emergency"
+            android:theme="@style/AppTheme.NoActionBarRed" />
         <activity android:name=".Functions" />
         <activity android:name=".DisableAppSwitch" />
         <activity android:name=".Profile" />
@@ -188,8 +189,9 @@
             android:theme="@style/AppTheme.NoActionBarRed" />
 
         <!-- Call Log Package -->
-        <activity android:name=".CallLog.CallLogActivity"
-            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".CallLog.CallLogActivity"
+            android:theme="@style/AppTheme" />
 
         <!-- GROUP SENDER PACKAGE -->
         <activity
@@ -208,11 +210,10 @@
             </intent-filter>
         </receiver>
 
-
-        <!--Live to text -->
+        <!-- Live to text -->
         <activity
-            android:name="com.training.android.undivided.LivetoText.DictateandSend"
-            android:label="@string/app_name" >
+            android:name=".LivetoText.DictateandSend"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -220,8 +221,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.training.android.undivided.LivetoText.ConfigureScreen"
-            android:label="@string/app_name" >
+            android:name=".LivetoText.ConfigureScreen"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -229,17 +230,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.training.android.undivided.LivetoText.IncomingCall"
-            android:label="@string/app_name" >
+            android:name=".LivetoText.IncomingCall"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <service
-            android:name="com.training.android.undivided.LivetoText.NotiListener"
-
+            android:name=".LivetoText.NotiListener"
             android:label="NotiListener"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
@@ -247,30 +248,19 @@
             </intent-filter>
         </service>
         <service
-            android:name="com.training.android.undivided.LivetoText.SmsListener"
-
-            android:label="SmsListener"
-            >
-        </service>
+            android:name=".LivetoText.SmsListener"
+            android:label="SmsListener"></service>
         <service
-            android:name="com.training.android.undivided.LivetoText.seperatereadout"
-
-            android:label="SmsListener"
-            >
-        </service>
+            android:name=".LivetoText.seperatereadout"
+            android:label="SmsListener"></service>
         <service
-            android:name="com.training.android.undivided.LivetoText.ReadOut"
-
-            android:label="ReadOut"
-            >
-        </service>
+            android:name=".LivetoText.ReadOut"
+            android:label="ReadOut"></service>
         <service
-            android:name="com.training.android.undivided.LivetoText.ReadOutAndSignal"
+            android:name=".LivetoText.ReadOutAndSignal"
+            android:label="ReadOutAndSignal"></service>
 
-            android:label="ReadOutAndSignal"
-            >
-        </service>
-
+        <activity android:name=".DriveHistory.DriveHistory"></activity>
     </application>
 
 </manifest>
