--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.training.android.undivided"
-    android:name=".MyApp">
+    android:name=".MyApp"
+    package="com.training.android.undivided">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -212,8 +212,9 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".NavigationMode.EmergencyContactsList"
-            android:theme="@style/AppTheme.myTheme"/>
+        <activity
+            android:name=".NavigationMode.EmergencyContactsList"
+            android:theme="@style/AppTheme.myTheme" />
 
 
         <!--Live to text -->
@@ -267,6 +268,18 @@
             android:label="ReadOutAndSignal"></service>
 
         <activity android:name=".DriveHistory.DriveHistory"></activity>
+
+        <receiver android:name=".BroadcastReceiver.Call_Receiver">
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".BroadcastReceiver.SMS_Receiver">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
